Re-wrote entire Database system to allow support for JSON and future databases. Databases now update every 30 seconds instead after every action.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,7 +2,7 @@
 # Which database to use. If mysql is disabled, a JSON file will be used.
 DatabaseType:
   mysql:
-    enabled: true
+    enabled: false
     host: "your_url"
     username: "your_username"
     password: "your_password"
