Added dynamic pagination to FriendsGUI. Also added a temporary debugging command to add and remove friends.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,4 +9,7 @@ commands:
   profile:
     description: Opens player's profile
     usage: /profile
+#  debugFriendList:
+#    description: Debug command to view friend list
+#    usage: /debugFriendList {add/remove} {amount}
 
